# MiPushZygisk

./: .gitignore  README.md  build.sh
.github/workflows/: build.yml
docs/: app.conf.example
magisk/: customize.sh  module.prop
magisk/defaults/: app.conf
module/: Cargo.toml
module/src/: config.rs  hook.rs  lib.rs  server.rs
