[package]
name = "mipush_zygisk"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "mipush_zygisk"
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.14"
jni = "0.21"
log = "0.4"
zygisk-api = { git = "https://github.com/rmnscnce/zygisk-api-rs" }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"

